@@ -7,12 +7,12 @@ ms.topic: how-to
 ms.date: 11/04/2019
 ms.author: brendm
 ms.custom: devx-track-java
-ms.openlocfilehash: 776cc002304ea96cbf81d6cf08e5a54c19f86f4b
-ms.sourcegitcommit: 4a54c268400b4158b78bb1d37235b79409cb5816
+ms.openlocfilehash: 71408513e18dc506f2c596d4e05db4fcc98ccea2
+ms.sourcegitcommit: 190658142b592db528c631a672fdde4692872fd8
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 04/28/2021
-ms.locfileid: "108135331"
+ms.lasthandoff: 06/11/2021
+ms.locfileid: "112004153"
 ---
 # <a name="bind-an-azure-database-for-mysql-instance-to-your-azure-spring-cloud-application"></a>Azure Database for MySQL インスタンスを Azure Spring Cloud アプリケーションにバインドする 
 
@@ -28,11 +28,7 @@ Azure Spring Cloud では、Spring Boot アプリケーションを手動で構�
 
 デプロイされている Azure Spring Cloud インスタンスがない場合は、[Azure portal を使用して Azure Spring Cloud アプリケーションを起動する方法に関するクイックスタート](./quickstart.md)の手順に従って、初めての Spring Cloud アプリをデプロイしてください。
 
-## <a name="bind-your-app-to-your-azure-database-for-mysql-instance"></a>アプリを Azure Database for MySQL インスタンスにバインドする
-
-1. 自分の Azure Database for MySQL アカウントの管理者ユーザー名とパスワードをメモしておきます。 
-
-1. サーバーに接続し、MySQL クライアントから **testdb** という名前のデータベースを作成し、新しい非管理者アカウントを作成します。
+## <a name="prepare-your-java-project"></a>Java プロジェクトを準備する
 
 1. プロジェクトの *pom.xml* ファイルに、次の依存関係を追加します。
 
@@ -44,7 +40,14 @@ Azure Spring Cloud では、Spring Boot アプリケーションを手動で構�
     ```
 1. *application.properties* ファイルから、`spring.datasource.*` プロパティをすべて削除します。
 
-1. `az spring-cloud app update` を実行して現在のデプロイを更新するか、`az spring-cloud app deployment create` を実行してこの変更のための新しいデプロイを作成します。  これらのコマンドは、新しい依存関係でアプリケーションを更新または作成します。
+1. `az spring-cloud app deploy` を実行して現在のアプリを更新するか、`az spring-cloud app deployment create` を実行してこの変更のための新しいデプロイを作成します。
+
+## <a name="bind-your-app-to-the-azure-database-for-mysql-instance"></a>アプリを Azure Database for MySQL インスタンスにバインドする
+
+#### <a name="service-binding"></a>[サービス バインド](#tab/Service-Binding)
+1. 自分の Azure Database for MySQL アカウントの管理者ユーザー名とパスワードをメモしておきます。 
+
+1. サーバーに接続し、MySQL クライアントから **testdb** という名前のデータベースを作成し、新しい非管理者アカウントを作成します。
 
 1. Azure portal の **Azure Spring Cloud** サービスのページで **アプリケーション ダッシュボード** を探し、Azure Database for MySQL インスタンスにバインドするアプリケーションを選択します。  これは、前の手順で更新またはデプロイしたのと同じアプリケーションです。 
 
@@ -61,6 +64,113 @@ Azure Spring Cloud では、Spring Boot アプリケーションを手動で構�
     spring.datasource.password=abc******
     spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
     ```
+
+#### <a name="terraform"></a>[Terraform](#tab/Terraform)
+
+次の Terraform スクリプトは、Azure Database for MySQL を使用して Azure Spring Cloud アプリを設定する方法を示しています。
+
+```terraform
+provider "azurerm" {
+  features {}
+}
+
+variable "application_name" {
+  type        = string
+  description = "The name of your application"
+  default     = "demo-abc"
+}
+
+variable "administrator_login" {
+  type        = string
+  description = "The MySQL administrator login"
+  default     = "myadmin"
+}
+
+resource "azurerm_resource_group" "example" {
+  name     = "example-resources"
+  location = "West Europe"
+}
+
+resource "random_password" "password" {
+  length           = 32
+  special          = true
+  override_special = "_%@"
+}
+
+resource "azurerm_mysql_server" "database" {
+  name                = "mysql-${var.application_name}-001"
+  resource_group_name = azurerm_resource_group.example.name
+  location            = azurerm_resource_group.example.location
+
+  administrator_login          = var.administrator_login
+  administrator_login_password = random_password.password.result
+
+  sku_name                          = "B_Gen5_1"
+  storage_mb                        = 5120
+  version                           = "5.7"
+  auto_grow_enabled                 = true
+  backup_retention_days             = 7
+  geo_redundant_backup_enabled      = false
+  infrastructure_encryption_enabled = false
+  public_network_access_enabled     = true
+  ssl_enforcement_enabled           = true
+  ssl_minimal_tls_version_enforced  = "TLS1_2"
+}
+
+resource "azurerm_mysql_database" "database" {
+  name                = "mysqldb-${var.application_name}-001"
+  resource_group_name = azurerm_resource_group.example.name
+  server_name         = azurerm_mysql_server.database.name
+  charset             = "utf8"
+  collation           = "utf8_unicode_ci"
+}
+
+# This rule is to enable the 'Allow access to Azure services' checkbox
+resource "azurerm_mysql_firewall_rule" "database" {
+  name                = "mysqlfw-${var.application_name}-001"
+  resource_group_name = azurerm_resource_group.example.name
+  server_name         = azurerm_mysql_server.database.name
+  start_ip_address    = "0.0.0.0"
+  end_ip_address      = "0.0.0.0"
+}
+
+resource "azurerm_spring_cloud_service" "example" {
+  name                = "example-springcloud"
+  resource_group_name = azurerm_resource_group.example.name
+  location            = azurerm_resource_group.example.location
+}
+
+resource "azurerm_spring_cloud_app" "example" {
+  name                = "example-springcloudapp"
+  resource_group_name = azurerm_resource_group.example.name
+  service_name        = azurerm_spring_cloud_service.example.name
+  is_public           = true
+  https_only          = true
+}
+
+resource "azurerm_spring_cloud_java_deployment" "example" {
+  name                = "default"
+  spring_cloud_app_id = azurerm_spring_cloud_app.example.id
+  cpu                 = 2
+  memory_in_gb        = 4
+  instance_count      = 2
+  jvm_options         = "-XX:+PrintGC"
+  runtime_version     = "Java_11"
+
+  environment_variables = {
+    "spring.datasource.url" : "jdbc:mysql://${azurerm_mysql_server.database.fqdn}:3306/${azurerm_mysql_database.database.name}?useSSL=true&requireSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC"
+    "spring.datasource.username" : "${var.administrator_login}@${azurerm_mysql_server.database.name}"
+    "spring.datasource.password" : random_password.password.result
+    "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect"
+  }
+}
+
+resource "azurerm_spring_cloud_active_deployment" "example" {
+  spring_cloud_app_id = azurerm_spring_cloud_app.example.id
+  deployment_name     = azurerm_spring_cloud_java_deployment.example.name
+}
+```
+---
 
 ## <a name="next-steps"></a>次のステップ
 
